--- a/index_eng.html
+++ b/index_eng.html
@@ -35,7 +35,7 @@
 					<li><a href="#aboutme" id="scrollabout">About Me</a></li>
 					<li><a href="#skills" id="scrollweb">Web Dev</a></li>
 					<li><a href="#skills-VG" id="scrollVG">Video Game Dev</a></li>
-					<li><a href="index_fr.html" id="change-lang"><img src="img/logo-FR.png"></a></li>
+					<li><a href="index.html" id="change-lang"><img src="img/logo-FR.png"></a></li>
 				</ul>
 			</div> <!-- collapse -->
 		</div> <!-- container -->	
