--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div id="projet-blog">
 							<h4>le Blog de l'espace</h4>
 							
-							<img src="img/Spaceblog.png">
+							<img src="img/Spaceblog.PNG">
 							<p>Ma toute première page web et aussi mon tout premier projet. Je le mets dans cette liste car même s'il n'est pas très beau et fonctionnel, il aura toujours une place dans mon coeur. Le vrai but de ce projet était de tester nos comptences en <strong>HTML</strong> et <strong>CSS</strong>, qui sont les languages de base pour créer des pages webs.</p>
 						</div>
 				</div>
