--- a/index_eng.html
+++ b/index_eng.html
@@ -46,7 +46,7 @@
 				<!-- partie carousel avec le texte d'intro -->
 <div class="carousel slide" data-ride="carousel" id="carousel-header">
 	<div class="carousel-inner">
-		<div class="item"><img src="img/background-1-resize.jpg" alt="première image du carousel"></div>
+<!-- 		<div class="item"><img src="img/background-1-resize.jpg" alt="première image du carousel"></div> -->
 		<div class="item"><img src="img/background-3.jpeg" alt="deuxième image du carousel"></div>
 		<div class="item active"><img src="img/background-2.jpeg" alt="troisième image du carousel"></div>
 		<div class="item"><img src="img/background-5.jpg" alt="quatrième image du carousel"></div>
