--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<ul id="contact">
 				<li><span class="glyphicon glyphicon-envelope"></span>Thomas.nguyencong@ynov.com</li>
 				<li><span class="glyphicon glyphicon-earphone"></span>Tel : 06 87 21 56 84</li>
-				<li><span class="glyphicon glyphicon-home"></span>208 rue st-Denis, 75002 Paris</li>
+				<li><span class="glyphicon glyphicon-home"></span>19 rue de la Pierre Levée, 75011 Paris</li>
 				<li><span class="glyphicon glyphicon-user"></span><a href="https://www.facebook.com/profile.php?id=1831734134&ref=bookmarks" target="_blank">Thomas Nguyen facebook</a></li>
 				<li><span class="glyphicon glyphicon-link"></span><a href="https://www.linkedin.com/in/thomas-nguyen-cong-8b9539154/" target="_blank">Thomas Nguyen Cong linkdn</a></li>
 				<li><span class="glyphicon glyphicon-education"></span><a href="https://www.ingesup.com/campus/paris/" target="_blank">Ynov-Ingésup</a></li>
