--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 		<div class="row" id="intro">
 			<h1 class="col-lg-12">Nguyen Cong Thomas</h1>
-			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Bonjour, je m'appelle Thomas et je suis étudiant en première année d'école d'informatique à Ingésup. Ce site web est un projet sur lequel j'ai travaillé parmi d'autres, et je l'utilise comme CV en ligne pour les gens qui pourraient être intéressés par mon profil.<br>
+			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Bonjour, je m'appelle Thomas et je suis étudiant en 2ème année de <strong>Bachelor Architecture informatique et systèmes d’information</strong> à Ingésup. Ce site web est un projet sur lequel j'ai travaillé parmi d'autres, et je l'utilise comme CV en ligne pour les gens qui pourraient être intéressés par mon profil.<br>
 			Je vous souhaite donc la bienvenue sur mon site et espère que vous allez vous y plaire.
 			</p>
 		</div> <!-- texte intro -->
