--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
 		<div class="col-xs-10 col-sm-6 col-sm-offset-1 col-xs-offset-1">
 			<h3> Parcours</h3>
-			<article>Comme explicité plus haut, je m'appelle Thomas Nguyen Cong et je suis étudiant en première année à <a href="https://www.ingesup.com/" target="_blank">Ynov-Ingésup</a>. Avant ça j'ai fait 4 années de fac à la Sorbonne (Paris-1) où j'ai obtenu une Licence en économie et management. Et encore plus tot, en 2013, j'obtenais mon Baccalauréat ES avec mention.<br>
+			<article>Comme explicité plus haut, je m'appelle Thomas Nguyen Cong et je suis étudiant en deuxième année à <a href="https://www.ingesup.com/" target="_blank">Ynov-Ingésup</a>. Avant ça j'ai fait 4 années de fac à la Sorbonne (Paris-1) où j'ai obtenu une Licence en économie et management. Et encore plus tot, en 2013, j'obtenais mon Baccalauréat ES avec mention.<br>
 			Passer de l'université à l'école d'informatique était une décision difficile à prendre car changer de cursus en bac +4 etait un risque. Cependant je me rends compte aujourd'hui que ce choix était pour moi une nécéssité. L'informatique est un sujet qui me passionne, que ca soit au niveau du développement (web, appli, jeux vidéos...), de la data ou encore au niveau technique(fonctionnement des machines, réseau etc...). J'ai développé un véritable plaisir à travailler, en particulier sur les différents projets donnés par l'école, qui furent de véritables opportunités de développement personnel.<br>
-			J'ai également quelques expériences dans le monde du travail, qui consistent principalement à un job d'été en comptabilité chez NewEdge group SA et différents stages.
+			Jusque ici, mes expériences professionnelles peuvent se résumer à un stage chez EReputationDefender en web et référencement du site principal de l'entreprise en Juin/juillet 2018. Et ainsi qu'un stage chez Heliofort lors de l'été 2017, au cours duquel jai pu travailler sur le développement d'une application web de gestion de cave à vins.
 			</article>
 		</div> <!-- background -->
 
