--- a/index_eng.html
+++ b/index_eng.html
@@ -89,7 +89,7 @@
 
 		<div class="col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" id="hobbies">
 
-		<h3>Hobbies</h3>
+		<h3>Hobbies mamène</h3>
 		<p>Just like everyone, I have different hobbies and interests, I enjoy sports very much and have been playing competitevely since I was very young, especially basketball, football and tennis. I also enjoy a large variety of music styles going from electronic tunes to french and belgian rap only to cite a few. I like travelling alot and even think it's an essential part of life, when I was younger i had the opportunity to go to many exciting countries all thanks to my family. Since then it's been an objective to see as much of the world as possible. </p>
 			
 		</div> <!-- hobbies -->
