--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
 		<div class="row" id="intro">
 			<h1 class="col-lg-12">Nguyen Cong Thomas</h1>
-			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Bonjour, je m'appelle Thomas et je suis étudiant en 2ème année de <strong>Bachelor Architecture informatique et systèmes d’information</strong> à Ingésup. Ce site web est un projet sur lequel j'ai travaillé parmi d'autres, et je l'utilise comme CV en ligne pour les gens qui pourraient être intéressés par mon profil.<br>
-			Je vous souhaite donc la bienvenue sur mon site et espère que vous allez vous y plaire.
+			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Bonjour, je suis étudiant en 2ème année de <strong>Bachelor Architecture informatique et systèmes d’information</strong> à Ingésup.
+			 Ce site me sert de Portfolio, vous y trouverez les projets qui m'ont le plus marqué au cours de ma carrière informatique.
 			</p>
 		</div> <!-- texte intro -->
 	</div> <!-- carousel inner -->
@@ -69,16 +69,17 @@
 
 		<div class="col-xs-10 col-sm-6 col-sm-offset-1 col-xs-offset-1">
 			<h3> Parcours</h3>
-			<article>Comme explicité plus haut, je m'appelle Thomas Nguyen Cong et je suis étudiant en deuxième année à <a href="https://www.ingesup.com/" target="_blank">Ynov-Ingésup</a>. Avant ça j'ai fait 4 années de fac à la Sorbonne (Paris-1) où j'ai obtenu une Licence en économie et management. Et encore plus tot, en 2013, j'obtenais mon Baccalauréat ES avec mention.<br>
-			Passer de l'université à l'école d'informatique était une décision difficile à prendre car changer de cursus en bac +4 etait un risque. Cependant je me rends compte aujourd'hui que ce choix était pour moi une nécéssité. L'informatique est un sujet qui me passionne, que ca soit au niveau du développement (web, appli, jeux vidéos...), de la data ou encore au niveau technique(fonctionnement des machines, réseau etc...). J'ai développé un véritable plaisir à travailler, en particulier sur les différents projets donnés par l'école, qui furent de véritables opportunités de développement personnel.<br>
-			Jusque ici, mes expériences professionnelles peuvent se résumer à un stage chez EReputationDefender en web et référencement du site principal de l'entreprise en Juin/juillet 2018. Et ainsi qu'un stage chez Heliofort lors de l'été 2017, au cours duquel jai pu travailler sur le développement d'une application web de gestion de cave à vins.
-			</article>
+			<article>Avant d'entreprendre des études d'informatique, j'ai passé 4 ans à l'université de la Sorbonne (Paris-1) où j'ai obtenu une Licence en Gestion, Stratégie et Economie d'entreprise.<br>
+			Passer de l'université à l'école d'informatique était une décision difficile à prendre car changer de cursus en bac +4 etait un risque. Cependant je me rends compte aujourd'hui que ce choix était pour moi une nécéssité. 
+			L'informatique dans sa globalité est un secteur dans lequel je ne m'ennuirai jamais, tant il y a apprendre et/ou innover.<br> 
+			La Cybersécurité est cependant le domaine vers lequel je souhaite me spécialiser sachant qu'il est extrêmement important de savoir se protéger face aux menaces d'aujourd'hui et de demain. <br>
+			D'ailleurs, je suis actuellement en recherche d'un stage pour l'été 2019 et une alternance pour l'année 2019/2020, donc n'hésitez surtout pas à me contacter si jamais mon profil vous intéresse!</article>
 		</div> <!-- background -->
 
 		<div class="col-xs-10 col-sm-5 col-xs-offset-1 col-sm-offset-0">
 			<h3> Contact/Infos</h3>
 			<ul id="contact">
-				<li><span class="glyphicon glyphicon-envelope"></span>Thomas.nguyencong@ynov.com</li>
+				<li><span class="glyphicon glyphicon-envelope"></span>thomas.nguyencong@ynov.com</li>
 				<li><span class="glyphicon glyphicon-earphone"></span>Tel : 06 87 21 56 84</li>
 				<li><span class="glyphicon glyphicon-home"></span>19 rue de la Pierre Levée, 75011 Paris</li>
 				<li><span class="glyphicon glyphicon-user"></span><a href="https://www.facebook.com/profile.php?id=1831734134&ref=bookmarks" target="_blank">Thomas Nguyen facebook</a></li>
