--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Mon CV en ligne</title>
+	<title>Mon Site Portfolio</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -57,7 +57,7 @@
 		<div class="row" id="intro">
 			<h1 class="col-lg-12">Nguyen Cong Thomas</h1>
 			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Bonjour, je suis étudiant en 2ème année de <strong>Bachelor Architecture informatique et systèmes d’information</strong> à Ingésup.
-			 Ce site me sert de Portfolio, vous y trouverez les projets qui m'ont le plus marqué au cours de ma carrière informatique.
+			 J'ai crée ce site dans le but d'avoir mon propre Portfolio en ligne, vous y trouverez donc les projets qui m'ont le plus marqué au cours de ma carrière informatique.
 			</p>
 		</div> <!-- texte intro -->
 	</div> <!-- carousel inner -->
@@ -91,12 +91,6 @@
 			</ul>
 		</div> <!-- contact/infos -->
 
-		<div class="col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" id="hobbies">
-
-		<h3>Hobbies</h3>
-		<p>Comme tout le monde, j'ai mes différents hobbies et centres d'intérêt. J'ai toujours aimé faire du sport que ce soit pour le fun ou de manière compétitive, surtout le Basket, le Foot et le Tennis. Je suis aussi un grand fan de musique, mangas et jeux-vidéos. Une de mes autres grandes passions est le voyage, depuis tout petit grâce à ma famille, j'ai eu l'occasion de visiter un tas de pays. Depuis, je me suis fixé comme objectif de voyager et voir le monde autant que possible. </p>
-			
-		</div> <!-- hobbies -->
 	</div>	<!-- row -->
 </div> <!-- about me -->
 
@@ -113,7 +107,7 @@
 				
 				<h3 id="title-align">Développement Web</h3>
 				<p>Le développement web est sans aucun doute le domaine qui m'a offert le plus d'opportunités, que ce soit au niveau des projets personnels ou de mes experiences de travail en entreprise.
-				Etant à la base un fan de Cybersécurité et dev jeux-vidéos, devoir m'investir dans des pojets de sites en HTML/CSS était assez laborieux, mais bon, il faut bien commencer par les bases.
+				Etant à la base motivé par la Cybersécurité et le dev jeux-vidéos, devoir m'investir dans des pojets de sites en HTML/CSS était assez laborieux, mais bon, il faut bien commencer par les bases.
 				Cette année en revanche, j'ai redécouvert le web sous un autre jour. A travers différents projets de création d'Api REST avec Node.js et Vue, j'ai compris qu'il y avait bien plus au developpement web que ce que pouvais imaginer auparavant.
 				</p>								
 			</div>	
@@ -131,10 +125,10 @@
 									<img src="img/node-portfolio2.png">
 								</div>
 								<div class="col-lg-6 col-sm-12">
-									<img src="img/node-portfolio3.png">
+									<img src="img/node-portfo-4.jpg">
 								</div>
 							</div>
-							<p>Ma toute première Api, et aussi mes premiers pas avec Node.js et Vue. C'est un projet que j'ai réalisé dans le cadre d'un cours et qui à été réalisé avec les modules <strong>MongoDB</strong>, <strong>Express</strong>, <strong>Nodemon</strong> et d'autres. Ce projet est disponible sur mon <a href="https://github.com/thomas-NC/nodeApi" target="_blank">Github</a></p>
+							<p>Ma toute première Api, et aussi mes premiers pas avec Node.js et Vue. C'est un projet que j'ai réalisé dans le cadre d'un cours et qui à été réalisé avec les modules <strong>MongoDB</strong>, <strong>Express</strong>, <strong>Vue-Material</strong> et d'autres. Ce projet est disponible sur mon <a href="https://github.com/thomas-NC/nodeApi" target="_blank">Github</a></p>
 						</div>
 				</div>
 
