--- a/index_eng.html
+++ b/index_eng.html
@@ -3,9 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>My online resume</title>
+	<title>My Online Portfolio</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style_index.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="parallax.min.js"></script>
@@ -54,8 +55,8 @@
 
 		<div class="row" id="intro">
 			<h1 class="col-lg-12">Nguyen Cong Thomas</h1>
-			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Hi I’m thomas, I'm a student, currently in my first year of school learning web and applications development. This website is a project I worked on to be used as an online resume for people that could be interested in my profile.<br>
-			This is a single page website, so feel free to scroll down or use the navigation menu up on the right to have a look around
+			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Hi, I'm a student currently learning Computer Science at Ynov-Ingésup in France. I made this website so that I would have my own online Portfolio. On display here are the projects that I value as big steps in my career path.
+				 
 			</p>
 		</div> <!-- texte intro -->
 	</div> <!-- carousel inner -->
@@ -78,21 +79,16 @@
 		<div class="col-xs-10 col-sm-5 col-xs-offset-1 col-sm-offset-0">
 			<h3> Contact/Infos</h3>
 			<ul id="contact">
-				<li><span class="glyphicon glyphicon-envelope"></span>Thomas.nguyencong@ynov.com</li>
-				<li><span class="glyphicon glyphicon-earphone"></span>Tel : 06 87 21 56 84</li>
-				<li><span class="glyphicon glyphicon-home"></span>19 rue de la Pierre Levée, 75011 Paris</li>
-				<li><span class="glyphicon glyphicon-user"></span><a href="https://www.facebook.com/profile.php?id=1831734134&ref=bookmarks" target="_blank">Thomas Nguyen facebook</a></li>
-				<li><span class="glyphicon glyphicon-link"></span><a href="https://www.linkedin.com/in/thomas-nguyen-cong-8b9539154/" target="_blank">Thomas Nguyen Cong linkdn</a></li>
-				<li><span class="glyphicon glyphicon-education"></span><a href="https://www.ingesup.com/campus/paris/" target="_blank">Ynov-Ingésup</a></li>
+				<li><span class="fas fa-envelope"></span><a href="mailto: thomas.nguyencong@ynov.com?subject=[Contact from the portfolio]">thomas.nguyencong@ynov.com</a></li>
+				<li><span class="fas fa-phone"></span>Tel : +33 6 87 21 56 84</li>
+				<li><span class="fas fa-home"></span>19 rue de la Pierre Levée, 75011 Paris</li>
+				<li><span class="fab fa-github"></span><a href="https://github.com/thomas-NC" target="_blank">Github</a></li>
+				<li><span class="fab fa-facebook"></span><a href="https://www.facebook.com/profile.php?id=1831734134&ref=bookmarks" target="_blank">Thomas Nguyen facebook</a></li>
+				<li><span class="fab fa-linkedin"></span><a href="https://www.linkedin.com/in/thomas-nguyen-cong-8b9539154/" target="_blank">Linkedin</a></li>
+				<li><span class="fas fa-graduation-cap"></span><a href="https://www.ingesup.com/campus/paris/" target="_blank">Ynov-Ingésup</a></li>
 			</ul>
 		</div> <!-- contact/infos -->
 
-		<div class="col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" id="hobbies">
-
-		<h3>Hobbies</h3>
-		<p>Just like everyone, I have different hobbies and interests, I enjoy sports very much and have been playing competitevely since I was very young, especially basketball, football and tennis. I also enjoy a large variety of music styles going from electronic tunes to french and belgian rap only to cite a few. I like travelling alot and even think it's an essential part of life, when I was younger i had the opportunity to go to many exciting countries all thanks to my family. Since then it's been an objective to see as much of the world as possible. </p>
-			
-		</div> <!-- hobbies -->
 	</div>	<!-- row -->
 </div> <!-- about me -->
 
