petite modif titre et intro

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Mon Site Portfolio</title>
+	<title>T.NC - Développeur Fullstack</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -58,7 +58,7 @@
 
 		<div class="row" id="intro">
 			<h1 class="col-lg-12">Nguyen Cong Thomas</h1>
-			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Bonjour, je suis étudiant en 2ème année de <strong>Bachelor Architecture informatique et systèmes d’information</strong> à Ingésup.
+			<p class="col-xs-8 col-xs-offset-2 col-lg-6 col-lg-offset-3">Bonjour, je suis étudiant en 3ème année de <strong>Bachelor Architecture informatique et systèmes d’information</strong> à Ingésup.
 			 J'ai crée ce site dans le but d'avoir mon propre Portfolio en ligne, vous y trouverez donc les projets qui m'ont le plus marqué au cours de ma carrière informatique.
 			</p>
 		</div> <!-- texte intro -->
